<resources>
    <string name="app_name">title</string>
    <string name="title">Bienvenido a ITV GAL \n ¿Qué desea realizar?</string>
    <string name="title2">ITV GAL \n LOGIN</string>
    <string name="accesocitaprevia">Acceso a cita previa</string>
    <string name="logindni">DNI:</string>
    <string name="atras">ATRÁS</string>
    <string name="Continuar">CONTINUAR</string>
    <string name="citaprevia">Cita Previa</string>
    <string name="reto2">Documentación</string>
    <string name="reto3">Taller</string>
    <string name="btnhecho">HECHO</string>
    <string name="reto4">Admin</string>
    <string name="btnback">HECHO</string>
    <string name="confirmar">confirmar</string>
    <string name="btnbuscar">BUSCAR</string>
    <string name="btnmodificar">MODIFICAR</string>
    <string name="btnborrar">ELIMINAR</string>
    <string name="ing_dni">Ingrese su DNI</string>
    <string name="ing_mat">Ingrese matrícula de su vehículo</string>
    <string name="muestra_dni">DNI</string>
    <string name="m_numpoliza">Número de póliza</string>
    <string name="m_nomcomp">Nombre de compañía</string>
    <string name="m_lugar">Localización cita</string>
    <string name="m_fecha">Fecha de cita</string>
    <string name="m_hora">Hora programada</string>
    <string name="m_matricula">Número de matrícula</string>
    <string name="m_numbastidor">Número de bastidor</string>
    <string name="m_marca">Marca del vehículo</string>
    <string name="m_modelo">Modelo del vehículo</string>
    <string name="m_anho">Año matriculación</string>
    <string name="dc_seguro">Documentación de su seguro</string>
    <string name="dc_citas">Información de su cita</string>
    <string name="dc_coche">Documentación de su vehículo</string>
    <string name="reg_coche">Registro de su vehículo</string>
    <string name="reg_seguro">Registro de su seguro</string>
    <string name="reg_citas">Registro de su cita</string>
    <string name="btn_mostrard">Mostrar mis datos</string>
    <string name="btn_mostrarc">Mis citas</string>
    <string name="u_dni">Escriba su DNI</string>
    <string name="u_password">Contraseña</string>
    <string name="u_ncompleto">Nombre de usuario</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_volver">Menú\n Principal</string>
    <string name="txtregistro">REGISTRO EN ITV GAL</string>
    <string name="titleisesion">INICIO DE SESIÓN</string>
    <string name="titleshow">MI CUENTA</string>
    <string name="ing_pwd">Ingrese su contraseña</string>
    <string name="m_dni">DNI</string>
    <string name="m_username">Nombre de usuario</string>
    <string name="m_email">Email</string>
    <string name="btncerrarsesion">Cerrar Sesión</string>

</resources>
