<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MisDatos_Doc">


    <Button
        android:id="@+id/bt_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="18dp"
        android:layout_marginRight="18dp"
        android:background="@color/colorAccent"
        android:text="@string/btnbuscar"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/ing_matricula"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ing_matricula"
        android:layout_width="265dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ing_mat"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/n_matricula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <EditText
        android:id="@+id/n_matricula"
        android:layout_width="368dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_matricula"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.409"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_buscar" />

    <EditText
        android:id="@+id/mostrar_marca"
        android:layout_width="372dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_marca"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_bastidor" />

    <EditText
        android:id="@+id/mostrar_modelo"
        android:layout_width="369dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_modelo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_marca" />

    <EditText
        android:id="@+id/mostrar_anho"
        android:layout_width="372dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_anho"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_modelo" />

    <Button
        android:id="@+id/btn_modificardoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/btnmodificar"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_eliminardoc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_anho" />

    <Button
        android:id="@+id/btn_eliminardoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/btnborrar"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_modificardoc"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_anho" />

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorAccent"
        android:text="@string/Continuar"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toEndOf="@+id/btn_eliminardoc"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_anho"
        android:onClick="OpenPrincipalMenu"/>

    <EditText
        android:id="@+id/n_bastidor"
        android:layout_width="372dp"
        android:layout_height="46dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:ems="10"
        android:hint="@string/m_numbastidor"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/n_matricula"
        android:gravity="center"/>

    <Button
        android:id="@+id/button11"
        android:layout_width="429dp"
        android:layout_height="121dp"
        android:background="@color/colorAccent"
        android:text="@string/dc_coche"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>