<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MisDatos">


    <EditText
        android:id="@+id/ingresar_dni"
        android:layout_width="249dp"
        android:layout_height="43dp"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ing_dni"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
        app:layout_constraintEnd_toStartOf="@+id/btn_buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorAccent"
        android:text="@string/btnbuscar"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ingresar_dni"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mostrar_dni"
        android:layout_width="398dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/muestra_dni"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar"
        android:gravity="center"/>

    <EditText
        android:id="@+id/m_numpoliza"
        android:layout_width="392dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_numpoliza"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_dni" />

    <EditText
        android:id="@+id/mostrar_nomcom"
        android:layout_width="390dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_nomcomp"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_numpoliza" />

    <EditText
        android:id="@+id/matricula_m"
        android:layout_width="390dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_matricula"
        android:inputType="textPersonName"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_nomcom" />

    <Button
        android:id="@+id/btn_eliminarseg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="183dp"
        android:background="@color/colorAccent"
        android:text="@string/btnborrar"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_modificarseg"
        app:layout_constraintTop_toBottomOf="@+id/matricula_m"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/btn_modificarseg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="183dp"
        android:background="@color/colorAccent"
        android:text="@string/btnmodificar"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/matricula_m" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="183dp"
        android:background="@color/colorAccent"
        android:onClick="MostrarDatosDoc"
        android:text="@string/Continuar"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toEndOf="@+id/btn_eliminarseg"
        app:layout_constraintTop_toBottomOf="@+id/matricula_m"
        app:layout_constraintVertical_bias="0.484" />

    <Button
        android:id="@+id/button9"
        android:layout_width="423dp"
        android:layout_height="113dp"
        android:background="@color/colorAccent"
        android:text="@string/dc_seguro"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>