<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MisDatosCita">

    <EditText
        android:id="@+id/m_dni"
        android:layout_width="367dp"
        android:layout_height="46dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/muestra_dni"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnbuscar"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnbuscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorAccent"
        android:text="@string/btnbuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ing_dni"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ing_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ing_dni"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/btnbuscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <EditText
        android:id="@+id/mostrar_lugar"
        android:layout_width="363dp"
        android:layout_height="43dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/m_lugar"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/m_dni"
        android:gravity="center"/>

    <EditText
        android:id="@+id/mostrar_fecha"
        android:layout_width="359dp"
        android:layout_height="54dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:ems="10"
        android:hint="@string/m_fecha"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_lugar"
        android:gravity="center"/>

    <EditText
        android:id="@+id/mostrar_hora"
        android:layout_width="355dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginBottom="2dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/m_hora"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnmodificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_fecha"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnmodificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="144dp"
        android:background="@color/colorAccent"
        android:text="@string/btnmodificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_hora" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="183dp"
        android:background="@color/colorAccent"
        android:text="@string/btnborrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnmodificar"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_hora"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/btn_menup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginBottom="183dp"
        android:background="@color/colorAccent"
        android:onClick="VolverMenuPrincipal"
        android:text="Menú \nPrincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btneliminar"
        app:layout_constraintTop_toBottomOf="@+id/mostrar_hora"
        app:layout_constraintVertical_bias="0.489" />

    <Button
        android:id="@+id/button10"
        android:layout_width="426dp"
        android:layout_height="110dp"
        android:background="@color/colorAccent"
        android:text="@string/dc_citas"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>